--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectEvaluationSlotBooking">
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".RegistrationActivity">
-
-        </activity>
-        <activity android:name=".LoginActivity" >
+        <activity android:name=".MessageInboxActivity"></activity>
+        <activity android:name=".MessageSentActivity" />
+        <activity android:name=".MessageComposeActivity" />
+        <activity android:name=".MessageActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".RegistrationActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
