--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath 'com.google.gms:google-services:4.3.5'
+        classpath "com.android.support:cardview-v7:27.0.2"
+        //classpath "androidx.cardview:cardview:1.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
