--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectEvaluationSlotBooking">
-        <activity android:name=".TeacherActivity"></activity>
+        <activity android:name=".AdminActivity"></activity>
+        <activity android:name=".TeacherActivity" />
         <activity android:name=".BookSlotActivity" />
         <activity android:name=".MessageInboxActivity" />
         <activity android:name=".MessageComposeActivity" />
