--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectEvaluationSlotBooking">
-        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".MarkSlotActivity"></activity>
+        <activity android:name=".NotificationActivity" />
         <activity android:name=".AdminActivity" />
         <activity android:name=".TeacherActivity" />
         <activity android:name=".BookSlotActivity" />
